--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,7 +1,7 @@
 defaults:
   - _self_
   - model: tape
-  - optimizer: adamw
+  - optimizer: lion
   - scheduler: cosine
   - override hydra/job_logging: colorlog
   - override hydra/hydra_logging: colorlog
@@ -17,11 +17,11 @@ train:
   resolution: 32
   center_crop: false
   random_flip: true
-  train_batch_size: 128
-  eval_batch_size: 128
+  train_batch_size: 64
+  eval_batch_size: 64
   num_workers: 8
-  num_epochs: 100
-  gradient_accumulation_steps: 1
+  num_epochs: 1500
+  gradient_accumulation_steps: 4
   mixed_precision: "no"  # Choose between "no", "fp16", "bf16"
   enable_xformers_memory_efficient_attention: false
   
@@ -29,13 +29,13 @@ train:
 diffusion:
   prediction_type: "epsilon"  # Choose between "epsilon" or "sample"
   num_train_timesteps: 1000
-  num_inference_steps: 50
+  num_inference_steps: 1000
   beta_schedule: "linear"
   
 # Checkpointing and logging
 checkpoint:
-  save_images_epochs: 10
-  save_model_epochs: 10
+  save_images_epochs: 20
+  save_model_epochs: 20
   checkpointing_steps: 500
   checkpoints_total_limit: 3
   resume_from_checkpoint: null
@@ -57,6 +57,7 @@ hub:
 
 # Hydra settings
 hydra:
+  # output_subdir: config # hydra config would be stored in .hydra
   run:
     dir: ${train.output_dir}
   sweep:
