--- a/config/config.yaml
+++ b/config/config.yaml
@@ -17,11 +17,11 @@ train:
   resolution: 32
   center_crop: false
   random_flip: true
-  train_batch_size: 64
-  eval_batch_size: 64
+  train_batch_size: 128
+  eval_batch_size: 128
   num_workers: 8
   num_epochs: 1500
-  gradient_accumulation_steps: 4
+  gradient_accumulation_steps: 2
   mixed_precision: "no"  # Choose between "no", "fp16", "bf16"
   enable_xformers_memory_efficient_attention: false
   
@@ -31,6 +31,13 @@ diffusion:
   num_train_timesteps: 1000
   num_inference_steps: 1000
   beta_schedule: "linear"
+  
+# EMA settings
+ema:
+  use_ema: true
+  ema_max_decay: 0.9999
+  ema_inv_gamma: 1.0
+  ema_power: 0.75
   
 # Checkpointing and logging
 checkpoint:
