--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,7 +1,7 @@
 defaults:
   - _self_
-  - model: rin #tape
-  - optimizer: lion
+  - model: rin # tape, unet
+  - optimizer: lion # adamw
   - scheduler: cosine
   - override hydra/job_logging: colorlog
   - override hydra/hydra_logging: colorlog
@@ -17,8 +17,8 @@ train:
   resolution: 32
   center_crop: false
   random_flip: true
-  train_batch_size: 128
-  eval_batch_size: 128
+  train_batch_size: 16
+  eval_batch_size: 16
   num_workers: 8
   num_epochs: 1500
   gradient_accumulation_steps: 2
@@ -27,10 +27,21 @@ train:
   
 # Diffusion settings
 diffusion:
-  prediction_type: "epsilon"  # Choose between "epsilon" or "sample"
+  prediction_type: "epsilon"  # Choose between "epsilon", "sample", or "v_prediction"
   num_train_timesteps: 1000
   num_inference_steps: 1000
   beta_schedule: "linear"
+  # Advanced features from RIN and tape
+  self_conditioning:
+    enabled: true
+    probability: 0.9
+    enable_for_latents: true
+  variance_normalization:
+    enabled: true
+    scale: 1.0  # Below 1.0 helps with higher resolution images
+  loss_weighting:
+    min_snr: true
+    min_snr_gamma: 5.0  # Clip signal-to-noise ratio
   
 # EMA settings
 ema:
