--- a/config/model/rin.yaml
+++ b/config/model/rin.yaml
@@ -2,13 +2,13 @@ name: rin
 sample_size: ${train.resolution}
 in_channels: 3
 out_channels: 3
-dim: 512
+dim: 256
 image_size: ${train.resolution}
-patch_size: 16
-depth: 6
+patch_size: 2
+depth: 3
 latent_self_attn_depth: 2
 dim_latent: 512
-num_latents: 256
+num_latents: 128
 learned_sinusoidal_dim: 16
 latent_token_time_cond: false
 dual_patchnorm: false
@@ -16,5 +16,5 @@ patches_self_attn: true
 attention:
   heads: 8
   dim_head: 64
-  flash: false
+  flash: true
   qk_norm: false
